# thrust_vis

./: .bashrc  2016-01-25-16-00-04.bag  README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/imu_3dm_gx4/: FilterOutput.h
devel/include/imu_msg/: pointMsg.h  statsMsg.h
devel/include/point_message/: pointMsg.h  statsMsg.h
devel/lib/image_testing/: colorSpaces  green_finder  heading_predict  hsv_converter  image_converter  image_flipper  orange_finder  rect_finder  thrust_vis
devel/lib/imu_3dm_gx4/: imu_3dm_gx4
devel/lib/learn_imu/: quaternion
devel/lib/pkgconfig/: camera_launches.pc  image_testing.pc  imu_3dm_gx4.pc  imu_msg.pc  learn_imu.pc  point_message.pc  thrust_vis.pc
devel/lib/thrust_vis/: thrust_vis
devel/share/camera_launches/cmake/: camera_launchesConfig.cmake
devel/share/image_testing/cmake/: image_testingConfig.cmake
devel/share/imu_3dm_gx4/cmake/: imu_3dm_gx4-msg-extras.cmake  imu_3dm_gx4-msg-paths.cmake  imu_3dm_gx4Config.cmake
devel/share/imu_msg/cmake/: imu_msg-msg-extras.cmake  imu_msg-msg-paths.cmake  imu_msgConfig.cmake
devel/share/learn_imu/cmake/: learn_imuConfig.cmake
devel/share/point_message/cmake/: point_message-msg-paths.cmake  point_messageConfig.cmake
devel/share/roseus/ros/imu_3dm_gx4/: manifest.l
devel/share/thrust_vis/cmake/: thrust_visConfig.cmake
src/: .hi.swp
src/imu/launch/: imu.launch
src/imu_msgs/: CMakeLists.txt  package.xml
src/imu_msgs/msg/: statsMsg.msg
src/thrust_vis/: CMakeLists.txt  package.xml
src/thrust_vis/src/: thrust_vis.cpp
src/vis_launch/: thrust_vis_launch.launch
(+25 files in other folders)
